# WebGraphics

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
TestWSM/: AniLib.js  AniLib.wasm  index.html
examples/custom_resources/src/: CMakeLists.txt  main.cpp
examples/empty_window/src/: CMakeLists.txt  main.cpp
examples/emscripten/src/: CMakeLists.txt  main.cpp
src/: App.cpp  App.h  CMakeLists.txt  Main.cpp  main.cpp  null.cpp
src/App/: App.cpp  App.h  CMakeLists.txt  DevController.cpp  DevController.h  MainMenu.cpp  MainMenu.h  SettingsMenu.cpp  SettingsMenu.h  ShaderUpdater.cpp  ShaderUpdater.h  UpdateTimer.cpp  UpdateTimer.h
src/App/Network/: DemoLobbyNet.cpp  DemoLobbyNet.h  GameNet.cpp  GameNet.h  LobbyNet.cpp  LobbyNet.h  NetID.h
src/App/Panels/: AchievementsMenu.cpp  AchievementsMenu.h  GamePanel.cpp  GamePanel.h  GameView.cpp  GameView.h  GameViewOverlay.cpp  GameViewOverlay.h  LobbyBrowser.cpp  LobbyBrowser.h  LobbyMenu.cpp  LobbyMenu.h  MainMenu.cpp  MainMenu.h  Panel.cpp  Panel.h  PanelContext.cpp  PanelContext.h  PanelFactory.cpp  PanelFactory.h  PanelHandler.cpp  PanelHandler.h  SettingsMenu.cpp
src/App/Panels/Game/: BoardButton.cpp  BoardButton.h  ChessScript.cpp  ChessScript.h  GameCamera.cpp  GameCamera.h  GameController.cpp  GameController.h  GamePanel.cpp  GamePanel.h  GameView.cpp  GameView.h
src/App/Panels/Lobby/: LobbyPanel.cpp  LobbySearchPanel.h
src/App/Panels/Main/: GamePanel.cpp  GamePanel.h  GameView.cpp  GameView.h  InstructionsPanel.cpp  InstructionsPanel.h  LobbyPanel.cpp  LobbyPanel.h  LobbySearchPanel.cpp  LobbySearchPanel.h  MainMenu.cpp  MainMenu.h  MainMenuPanel.cpp  MainMenuPanel.h  SettingsPanel.cpp  SettingsPanel.h
src/Audio/: Audio.cpp  Audio.h  CMakeLists.txt  SoloudAudio.cpp  SoloudAudio.h
src/Audio/soloud/: soloud.cpp  soloud_sdl2_static.cpp
src/Audio/soloud/audiosource/wav/: soloud_wav.cpp  soloud_wavstream.cpp
src/Audio/soloud/filter/: soloud_bassboostfilter.cpp  soloud_dcremovalfilter.cpp  soloud_eqfilter.cpp  soloud_flangerfilter.cpp  soloud_freeverbfilter.cpp  soloud_lofifilter.cpp  soloud_waveshaperfilter.cpp
src/Drawables/: Button.cpp  Button.h  ButtonImage.cpp  ButtonImage.h  CMakeLists.txt  Circle.cpp  Circle.h  Drawable.cpp  Drawable.h  Image.cpp  Image.h  Line.cpp  Line.h  Mesh.cpp  PoseMesh.cpp  Rect.cpp  Rect.h  Rectangle.h  ShaderTimer.cpp  ShaderTimer.h  Text.cpp  Text.h  View.cpp  View.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Graphics.cpp  Graphics.h  Looper.cpp  Resources.cpp
src/Engine/Audio/: Audio.cpp  Audio.h
src/Game/: AI.cpp  AI.h  Action.h  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  Game.cpp  Game.h  GameDemo.cpp  GameDemo.h  History.cpp  History.h  Player.cpp  Player.h  TicTacToe.cpp  TicTacToe.h
src/Game/Board/: Board.cpp  Board.h  BoardCheck.cpp  BoardCheck.h  BoardMove.cpp  BoardMove.h  Castle.cpp  Castle.h  EnPassant.cpp  EnPassant.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Point.cpp  Point.h  Tile.cpp  Tile.h
src/Game/Moves/: Move.cpp  Move.h  MoveFactory.cpp  MoveFactory.h  MultiMove.h
src/Graphics/: CMakeLists.txt  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  GlyphTextureCreator.cpp  GlyphTextureCreator.h  Graphics.cpp  Graphics.h  ImageObject.cpp  ImageObject.h  ImageShader.cpp  MainView.cpp  MainView.h  Shader.cpp  Shader.h  TextObject.cpp  TextObject.h  TextShader.cpp  TextShader.h
src/Graphics/Objects/: ImageObject.cpp  ImageObject.h  ModelObject.cpp  ObjectContainer.cpp  PoseModelObject.cpp  TextObject.cpp  TextObject.h  VertexObject.cpp  VertexObject.h
src/Graphics/Shaders/: Camera.cpp  ImageShader.cpp  ImageShader.h  Model.cpp  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderPrograms.cpp  ShaderPrograms.h  TextShader.cpp  TextShader.h
src/IO/: CMakeLists.txt  IO.cpp  IO.h  IOShader.cpp  IOShader.h  IOStuff.cpp  IOStuff.h  IOTexture.cpp  IOTexture.h  TextureData.h
src/IO/Bitsery/: CMakeLists.txt
src/IO/Controller/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/IO/Files/: FileChecker.cpp  FileChecker.h  FilePath.cpp  FilePathContainer.cpp  FilePathContainer.h  FolderPaths.cpp  FolderPaths.h  IOBinary.cpp  IOBinary.h  IOContainer.cpp  IOContainer.h  IOFonts.cpp  IOFonts.h  IOLogs.cpp  IOLogs.h  IOShader.cpp  IOShader.h  IOStuff.h  IOTexture.cpp  IOTexture.h  ShaderCompiler.h  ShaderData.h
src/IO/Files/Path/: FilePath.cpp  FilePath.h  FilePathContainer.cpp
src/IO/Files/Pose/: Animation.cpp  IOPose.cpp  TinyModel.cpp  tinyxml2.cpp
src/IO/Files/Shader/: DefaultShaderCode.cpp  DefaultShaderCode.h  IOShader.cpp  IOShader.h  ShaderCode.h  ShaderCompiler.cpp  ShaderCompiler.h
src/IO/Files/Texture/: IOTexture.cpp  IOTexture.h  lodepng.cpp
src/Model/: CMakeLists.txt  MatrixData.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h
src/UI/: Button.cpp  Button.h  CMakeLists.txt  ShaderTimer.cpp  ShaderTimer.h  Slider.cpp  Slider.h  Timer.cpp  Timer.h  UIElement.cpp  UIElement.h  UIHelperScripts.cpp  UIHelperScripts.h  UIScript.cpp  UIScript.h  UIScriptMethods.cpp  UIScriptMethods.h  UIScriptTypes.cpp  UIScriptTypes.h
src/UI/Script/: DrawableTypes.cpp  DrawableTypes.h  UIHelperScripts.h  UIScript.cpp  UIScript.h  UIScriptMethods.cpp  UIScriptTypes.cpp  UIScriptTypes.h  UITypes.cpp  UITypes.h
src/UI/Widgets/: Button.cpp  Button.h  Slider.cpp  Slider.h  UIElement.cpp  UIElement.h
src/Utility/: CMakeLists.txt  GLData.cpp  GLData.h  GLUtils.cpp  GLUtils.h  ShaderCompiler.h  ShaderPrograms.cpp  ShaderPrograms.h
src/Window/: AspectRatio.cpp  AspectRatio.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CanvasCallbacks.cpp  CanvasCallbacks.h  CanvasSettings.cpp  CanvasSettings.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageUniform.cpp  ImageUniform.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MyWindow.cpp  MyWindow.h  PostImageUniform.cpp  PostImageUniform.h  Screen.cpp  Screen.h  Shader.h  Text.cpp  Text.h  Window.cpp  Window.h
src/Window/InputDevices/: Keyboard.cpp  Keyboard.h  Mouse.cpp
(+113 files in other folders)
