

add_library(game "Chess.h" "Chess.cpp"      
"Board/Board.h" "Board/Board.cpp" 
  
"Board/Piece.h" "Board/Piece.cpp" 
"Board/Tile.h" "Board/Tile.cpp" 
"Board/Point.h"    "Board/Castle.h" "Board/Castle.cpp" "Board/EnPassant.h" "Board/EnPassant.cpp" "Board/BoardCheck.h" "Board/BoardCheck.cpp" "Board/Point.cpp" "Board/BoardMove.h" "Board/BoardMove.cpp" "History.h" "History.cpp" "Board/Move.h" "Board/Move.cpp")

